--- a/Image classifcation/Spinal_cord_segmentation/readme.me
+++ b/Image classifcation/Spinal_cord_segmentation/readme.me
@@ -2,5 +2,5 @@ In this project I mainly worked on MRI images of spinal cord.
 to detect abnormality in spinal cord images using image segmentation.
 For image segmentation i used mainly U-net architecture and it gave me the best results also.
 the output project is 
-![output](spinal_cord.JPG)
-![output1](CAPTURE.JPG)
+!(spinal_cord.JPG)
+!(CAPTURE.JPG)
