--- a/Image classifcation/Spinal_cord_segmentation/readme.me
+++ b/Image classifcation/Spinal_cord_segmentation/readme.me
@@ -2,5 +2,6 @@ In this project I mainly worked on MRI images of spinal cord.
 to detect abnormality in spinal cord images using image segmentation.
 For image segmentation i used mainly U-net architecture and it gave me the best results also.
 the output project is 
-!(spinal_cord.JPG)
-!(CAPTURE.JPG)
+
+![](spinal_cord.JPG)
+![](CAPTURE.JPG)
