--- a/Image classifcation/Spinal_cord_segmentation/readme.me
+++ b/Image classifcation/Spinal_cord_segmentation/readme.me
@@ -3,5 +3,5 @@ to detect abnormality in spinal cord images using image segmentation.
 For image segmentation i used mainly U-net architecture and it gave me the best results also.
 the output project is 
 
-![](spinal_cord.JPG)
-![](CAPTURE.JPG)
+![]('spinal_cord.JPG')
+![]('CAPTURE.JPG')
